# assota-txt2sql-poc

./: .dockerignore  .env.example  .gitignore  .ruff.toml  .vercelignore  Dockerfile  README.md  app.py  app_langgraph.py  chatbot.py  clickhouse_mcp_agent.py  clickhouse_mcp_proper.py  db_setup.py  langgraph.json  langgraph_config.py  pyproject.toml  requirements-vercel.txt  requirements.txt  system_prompt.txt  test_user.py  vercel.json  working_react_agent.py
.github/workflows/: cd.yml  ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
.vercel/: project.json
api/: app.py  index.py  requirements.txt
data/: appointments_cleaned_for_bigquery.csv  db.csv
src/: __init__.py
src/assota_chatbot/: __init__.py  main.py
src/assota_chatbot/agents/nodes/: executor.py  responder.py  router.py
src/assota_chatbot/agents/workflows/: react_agent.py
src/assota_chatbot/config/: settings.py
src/assota_chatbot/models/: data_schemas.py  state_models.py
src/assota_chatbot/tools/clickhouse/: client.py  queries.py
src/assota_chatbot/utils/: logging.py
src/assota_chatbot/web/: app.py
src/assota_chatbot/web/static/: style.css
src/assota_chatbot/web/templates/: index.html
static/: style.css
templates/: index.html
tests/: test_app.py
