[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assota-txt2sql-poc"
version = "0.1.0"
description = "LangGraph React agent with ClickHouse MCP integration for Assota medical chatbot"
authors = [{name = "Assota Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.5",
    "langchain-core>=0.3.74",
    "langchain-community>=0.3.27", 
    "langchain-openai>=0.3.30",
    "langsmith>=0.4.14",
    "python-dotenv>=1.0.1",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["data*", "static*", "templates*", "*.md", "*.txt", "*.json"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.5",
    "pytest>=7.4.4",
    "langgraph-cli>=0.1.50"
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]